# indico-plugin-topmenuextender

./: .gitignore  .style.yapf  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: python-publish.yml
indico_topmenu_extender/: plugin.py
