[metadata]
    name='indico-plugin-topmenuextender'
    url='https://github.com/bpedersen2/mlz-indico-extension'
    license='MIT'
    author='MLZ Indico Team'
    author_email='bjoern.pedersen@frm2.tum.de'
    classifiers= 
        Environment :: Plugins
        Environment :: Web Environment
        License :: OSI Approved :: MIT License
        Programming Language :: Python :: 2.7
[options]
    packages=find:
    zip_safe=False
    include_package_data=True
    use_scm_version= 
         write_to = indico_topmenu_extender/version.py
         local_scheme = node-and-timestamp
    setup_requires =
           setuptools>=39
           setuptools_scm[toml]>=3.4
    install_requires = 
             indico>=3.1
[options.entry_points]
   indico.plugins= 
       topmenu_extender = indico_topmenu_extender.plugin:TopMenuExtenderPlugin
